<resources>
    <string name="app_name">Micro</string>
    <string name="action_settings">Configurar</string>
    <string name="action_search">Buscar</string>

    <!-- StartActivity -->
    <string name="microscope_tab">Microscopios</string>
    <string name="gallery_tab">Mis imágenes</string>

    <!-- MicroStreamActivity  -->
    <string name="wait_dialog_title">Espere por favor...</string>
    <string name="wait_dialog_text">Buscando microscopios...</string>

    <!-- CapturedImageFragment -->
    <string name="save_button">Guardar y analizar</string>
    <string name="discard_button">Descartar</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_parameters_category">Configurar parámetros</string>>
    <string name="settings_service_title">Servicio</string>
    <string name="settings_protocol_title">Protocolo</string>
    <string name="settings_port_title">Puerto de streaming</string>
    <string name="settings_folder_title">Comando</string>
    <string name="settings_webapp_port_title">Puerto de aplicación web</string>
    <string name="settings_service_summary">Ingresá el nombre del servicio</string>
    <string name="settings_protocol_summary">Ingresá el protocolo a usar</string>
    <string name="settings_port_summary">Ingresá el puerto de streaming a utilizar</string>
    <string name="settings_folder_summary">Ingresá el comando a utilizar</string>
    <string name="settings_webapp_port_summary">Ingresá el puerto de la aplicación web</string>

    <!-- CapturedImageFragment -->
    <string name="error_taking_picture">Error al capturar la imagen</string>
    <string name="success_taking_picture">La imagen fue guardada correctamente</string>
    <string name="discard_image">La imagen fue descartada</string>
    <string name="analysis_error">Error al realizar el analisis</string>


    <string name="gallery_no_images">No hay imágenes guardadas</string>
    <string name="no_microscopes">No hay microscopios disponibles</string>

    <!-- RemoteGalleryActivity -->
    <string name="saving_image">Guardando imagen en la galerya local, espere...</string>

    <!-- RemoteGalleryItemFragment -->
    <string name="image_save">Imagen guardada en la galería local con el nombre</string>


    <!-- GalleryItemEditFragment -->
    <string name="name_hint">Nombre</string>
    <string name="detail_hint">Descripción</string>
    <string name="ok_button_edit">OK</string>
    <string name="cancel_button_edit">Cancelar</string>
    <string name="edit_item_title">Editar análisis</string>
    <string name="image_changed">Los cambios han sido guardados</string>

    <string name="remote_gallery">Galería remota</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>

    <string name="done">Listo</string>
    <string name="red_blood_cell_count">Cantidad de glóbulos rojos</string>
    <string name="not_analysed">Sin analizar</string>

</resources>
