<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_parameters_category" >

        <EditTextPreference
            android:title="@string/settings_service_title"
            android:summary="@string/settings_service_summary"
            android:defaultValue="micro"
            android:key="service_name"/>
        <ListPreference
            android:title="@string/settings_protocol_title"
            android:summary="@string/settings_protocol_summary"
            android:defaultValue="rtsp://"
            android:entries="@array/protocols_array"
            android:entryValues="@array/protocols_array"
            android:key="protocol"/>
        <EditTextPreference
            android:title="@string/settings_port_title"
            android:summary="@string/settings_port_summary"
            android:defaultValue="8554"
            android:key="port"/>
        <EditTextPreference
            android:title="@string/settings_folder_title"
            android:summary="@string/settings_port_summary"
            android:defaultValue="unicast"
            android:key="folder"/>
    </PreferenceCategory>

</PreferenceScreen>